--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
+  "name": "stock-predictions",
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
+    "openai": "^6.6.0",
     "vite": "^7.1.11"
   }
 }
